src/test/deca/syntax/invalid/provided/c.deca

class A {
    int fx;
    void fx() {}
}
